--- a/RealEstate_Dapper_Api/appsettings.json
+++ b/RealEstate_Dapper_Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "connection": "Server=DESKTOP-7DK8KHS\\SQLEXPRESS;initial Catalog=DbDapperRealEstate;integrated Security:true"
+    "connection": "Server=DESKTOP-7DK8KHS\\SQLEXPRESS;initial Catalog=DbDapperRealEstate;integrated Security=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
