--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,10 @@
 ###############################################################################
 * text=auto
 *.html linguist-detectable=false
+*.js linguist-detectable=false
+*.css linguist-detectable=false
+
+
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
